# foresight

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml  run.py
backend/app/: __init__.py  config.py  db.py
backend/app/api/: __init__.py  alerts.py  analysis.py  digests.py  mentions.py  monitors.py  settings.py  simulations.py  tasks.py
backend/app/models/: __init__.py  alert.py  mention.py  monitor.py  simulation.py  task.py
backend/app/services/: amplify_service.py  claude_analyzer.py  crewai_agents.py  crewai_engine.py  crewai_tools.py  crisis_detector.py  dedup_service.py  digest_generator.py  entity_discovery.py  graph_memory.py  graph_schema.py  graph_tools.py  historical_loader.py  influence_matrix.py  on_demand_ingestion.py  prediction_engine.py  scenario_data_fetcher.py  simulation_engine_legacy.py  simulation_personas.py  trend_analyzer.py
backend/app/services/ingestion/: __init__.py  base.py  finnhub.py  news_api.py  reddit.py  twitter.py
backend/app/utils/: claude_client.py  embeddings.py  llm_client.py  logger.py  retry.py
backend/migrations/: 001_initial.sql  002_simulations.sql  003_simulation_v2.sql  004_settings.sql  005_fix_simulations_fk.sql
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: alerts.js  analysis.js  digests.js  index.js  mentions.js  monitors.js  simulation.js
frontend/src/router/: index.js
frontend/src/views/: AmplifyView.vue  CrisisView.vue  DashboardView.vue  (+7 more)
(+35 files in other folders)
